chore: implement my listings rendering functionality and create card component

--- a/src/profile.html
+++ b/src/profile.html
@@ -169,6 +169,7 @@
               <h2 class="m-5 ms-0">My Listings</h2>
               <div
                 class="row row-cols-auto justify-content-center justify-content-md-start g-4"
+                id="my-listings"
               >
                 <div class="col col-md-6 col-lg-4 col-xxl-3">
                   <div class="card">
