chore: add sentinel for infinite scrolling and update renderItems to fetch items on visibility

--- a/src/index.html
+++ b/src/index.html
@@ -127,6 +127,7 @@
           <!-- Listings will be dynamically generated here -->
         </div>
       </section>
+      <div id="sentinel"></div>
     </main>
     <footer>
       <div class="container-fluid sticky-bottom">
