fix: add z-index to edit profile button to make sure it is clickable

--- a/src/profile.html
+++ b/src/profile.html
@@ -93,7 +93,7 @@
                         type="button"
                         name="edit-profile"
                         title="Edit Profile Picture"
-                        class="btn border rounded-circle d-flex justify-content-center"
+                        class="btn border rounded-circle d-flex justify-content-center z-3"
                       >
                         <i class="bi bi-pencil"></i>
                       </button>
