fix: update profile navigation item for authentication handling

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
               <li class="nav-item nav-border-custom">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item nav-profile">
                 <a class="nav-link" href="profile.html">Profile</a>
               </li>
               <li class="nav-item">
