fix: add nav-profile class to profile navigation item for styling consistency

--- a/src/detail.html
+++ b/src/detail.html
@@ -39,7 +39,7 @@
                   >Home</a
                 >
               </li>
-              <li class="nav-item">
+              <li class="nav-item nav-profile">
                 <a class="nav-link" href="profile.html">Profile</a>
               </li>
               <li class="nav-item">
