--- a/src/profile.html
+++ b/src/profile.html
@@ -40,7 +40,7 @@
                   >Home</a
                 >
               </li>
-              <li class="nav-item nav-border-custom">
+              <li class="nav-item nav-border-custom nav-profile">
                 <a class="nav-link active" href="#">Profile</a>
               </li>
               <li class="nav-item">
