feat: implement item detail view with rendering and data fetching

--- a/src/detail.html
+++ b/src/detail.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Tradeauction is a auction website" />
     <meta name="keywords" content="auction, trade, buy, sell" />
     <script type="module" src="js/index.mjs"></script>
-    <title>Item detail | Tradeauction</title>
+    <title>Item Detail | Tradeauction</title>
   </head>
   <body>
     <header class="sticky-top">
@@ -69,7 +69,7 @@
           >
             <div class="card-detail mb-3">
               <h1 class="mt-5 mb-5 ms-0">Product Detail</h1>
-              <div class="row g-0">
+              <div class="row g-0 item-detail-container">
                 <div class="col-md-4">
                   <img
                     src="img/sunflowers-1719119_640.jpg"
