--- a/src/profile.html
+++ b/src/profile.html
@@ -92,7 +92,7 @@
                       <button
                         type="button"
                         name="edit-profile"
-                        title="Edit Profile Picture"
+                        title="Edit Profile"
                         class="btn border rounded-circle d-flex justify-content-center z-1"
                       >
                         <i class="bi bi-pencil"></i>
