feat: update bid rendering and fetching logic to include listing details and improve UI structure

--- a/src/profile.html
+++ b/src/profile.html
@@ -116,11 +116,8 @@
                 </div>
                 <h2 class="m-5 ms-0">My Bids</h2>
                 <div class="bid-history-list-body p-3 pb-1 rounded-3">
-                  <ul class="p-0">
-                    <li
-                      class="d-flex justify-content-between"
-                      id="my-bids-container"
-                    >
+                  <ul class="p-0" id="my-bids-container">
+                    <li class="d-flex justify-content-between">
                       <!-- Dynamic content will be inserted here -->
                     </li>
                   </ul>
