feat: update credits display logic and improve media URL handling in modals

--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
           </div>
         </div>
         <div class="text-nowrap position-absolute display-credits">
-          <i>1000 Cr</i>
+          <i><!-- Content loaded dynamic -->></i>
         </div>
       </nav>
     </header>
@@ -122,7 +122,7 @@
           </div>
         </div>
         <div
-          class="row row-cols-auto justify-content-center justify-content-md-start g-4 items-container"
+          class="row row-cols-auto justify-content-center justify-content-md-start g-5 items-container"
         >
           <!-- Listings will be dynamically generated here -->
         </div>
