--- a/src/profile.html
+++ b/src/profile.html
@@ -63,7 +63,7 @@
           <span class="visually-hidden">Loading...</span>
         </div>
       </div>
-      <section class="container mt-3 mb-5">
+      <section class="container">
         <div class="container-fluid d-flex flex-column">
           <h1 class="m-5 ms-0">Profile</h1>
           <div class="card-profile mb-3 rounded-3">
