--- a/src/profile.html
+++ b/src/profile.html
@@ -165,7 +165,7 @@
             <div class="container-fluid mb-5 ps-0 pe-0">
               <h2 class="m-5 ms-0">My Listings</h2>
               <div
-                class="row row-cols-auto justify-content-center justify-content-md-start g-4"
+                class="row row-cols-auto justify-content-center justify-content-md-start gap-4"
                 id="my-listings"
               >
                 <div class="col col-md-6 col-lg-4 col-xxl-3">
