style: adjust item container gap and improve card layout for better presentation

--- a/src/index.html
+++ b/src/index.html
@@ -121,7 +121,7 @@
           </div>
         </div>
         <div
-          class="row row-cols-auto justify-content-center justify-content-md-start g-sm-5 items-container"
+          class="row row-cols-auto justify-content-center justify-content-md-start g-4 g-sm-5 items-container"
         >
           <!-- Listings will be dynamically generated here -->
         </div>
