style: update credits display to allow dynamic content generation

--- a/src/profile.html
+++ b/src/profile.html
@@ -50,7 +50,7 @@
           </div>
         </div>
         <div class="text-nowrap position-absolute display-credits">
-          <i>1000 Cr</i>
+          <i><!-- Content will be dynamically generated here --></i>
         </div>
       </nav>
     </header>
