--- a/src/detail.html
+++ b/src/detail.html
@@ -49,7 +49,7 @@
           </div>
         </div>
         <div class="text-nowrap position-absolute display-credits">
-          <i><!-- Content will be dynamically generated here -->></i>
+          <i><!-- Content will be dynamically generated here --></i>
         </div>
       </nav>
     </header>
@@ -126,7 +126,7 @@
                 <button
                   class="btn btn-secondary place-bid-button w-100"
                   type="submit"
-                  title="Submit Bid"
+                  title="Place a Bid"
                 >
                   Place Bid
                 </button>
