feat: update navigation links for consistent routing

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <header class="sticky-top">
       <nav class="navbar navbar-dark navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="/">
             <img
               src="img/logo.png"
               alt="Logo"
@@ -39,10 +39,10 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item nav-profile">
-                <a class="nav-link" href="profile.html">Profile</a>
+                <a class="nav-link" href="profile">Profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link nav-auth" href="authorization.html">Login</a>
+                <a class="nav-link nav-auth" href="authorization">Login</a>
               </li>
             </ul>
             <div class="container-fluid pb-2 search-container">
