--- a/src/profile.html
+++ b/src/profile.html
@@ -13,7 +13,7 @@
     <header class="sticky-top">
       <nav class="navbar navbar-dark navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="/">
             <img
               src="img/logo.png"
               alt="Logo"
@@ -36,15 +36,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
-                  >Home</a
-                >
+                <a class="nav-link" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item nav-border-custom nav-profile">
-                <a class="nav-link active" href="#">Profile</a>
+                <a class="nav-link active" href="profile">Profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link nav-auth" href="authorization.html">Login</a>
+                <a class="nav-link nav-auth" href="authorization">Login</a>
               </li>
             </ul>
           </div>
