feat: update add listing button to use a button element and add login check for functionality

--- a/src/index.html
+++ b/src/index.html
@@ -96,14 +96,9 @@
             <h1 class="text-center mt-5 ms-0">Listings</h1>
           </div>
           <div class="container-fluid d-flex gap-4 align-items-center">
-            <div>
-              <a
-                class="btn btn-primary text-nowrap add-listing-button"
-                href="#"
-                role="button"
-                ><i class="bi bi-plus"></i>Add Listing</a
-              >
-            </div>
+            <button type="button" class="btn add-listing-button">
+              <i class="bi bi-plus"></i>Add Listing
+            </button>
             <div class="form-check form-switch d-flex align-items-center">
               <input
                 class="form-check-input"
