feat: add autocomplete attributes to password fields for improved user experience

--- a/src/authorization.html
+++ b/src/authorization.html
@@ -89,6 +89,7 @@
                       id="Password"
                       placeholder="password"
                       minlength="8"
+                      autocomplete="current-password"
                       required
                     />
                     <label for="Password" class="form-label">Password</label>
@@ -153,6 +154,7 @@
                       id="signUpEmail"
                       aria-describedby="emailHelp"
                       placeholder="Email"
+                      autocomplete="email"
                       required
                     />
                     <label for="signUpEmail" class="form-label">Email</label>
@@ -167,6 +169,7 @@
                       id="signUpPassword"
                       placeholder="password"
                       minlength="8"
+                      autocomplete="new-password"
                       required
                     />
                     <label for="signUpPassword" class="form-label"
@@ -183,6 +186,7 @@
                       id="confirmPassword"
                       placeholder="password"
                       minlength="8"
+                      autocomplete="new-password"
                       required
                     />
                     <label for="confirmPassword" class="form-label"
