--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mx-auto mb-2 mb-lg-0 mt-lg-4">
+            <ul class="navbar-nav mx-auto mb-2 mb-lg-0 mt-lg-4 gap-0 gap-lg-4">
               <li class="nav-item nav-border-custom">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
