feat: enhance layout and styling for product detail and bidding sections

--- a/src/detail.html
+++ b/src/detail.html
@@ -61,7 +61,7 @@
         </div>
       </div>
       <section class="container-fluid mt-2 mb-5 product-section">
-        <div class="d-flex product-detail-container">
+        <div class="d-flex product-detail-container me-auto ms-auto">
           <div
             class="container-fluid d-inline-flex flex-column col-12 col-sm-7"
           >
