refactor: comment out unused product image section in detail view

--- a/src/detail.html
+++ b/src/detail.html
@@ -68,37 +68,7 @@
             <div class="card-detail mb-3">
               <h1 class="mt-5 mb-5 ms-0">Product Detail</h1>
               <div class="row g-0 item-detail-container">
-                <div class="col-md-4">
-                  <img
-                    src="img/sunflowers-1719119_640.jpg"
-                    class="img-fluid rounded-start"
-                    alt="Flower Vase"
-                  />
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body rounded-3 p-3">
-                    <div class="d-flex flex-wrap justify-content-between">
-                      <div>
-                        <h2 class="card-title text-nowrap">Flower Vase</h2>
-                      </div>
-                      <div>
-                        <small class="text-nowrap">Posted Aug 03.2025</small>
-                      </div>
-                    </div>
-                    <div></div>
-
-                    <i class="card-author">By <a href="#">Ola Nordmann</a></i>
-                    <div>
-                      <div>Total Bids:<span>1</span></div>
-                      <div>Highest Bid:<span>10</span></div>
-                      <div>Ends at:<span>Mars 27.2025</span></div>
-                    </div>
-                    <p class="card-text mt-5">
-                      Beautiful flower vase with a unique design. Perfect for
-                      home decor.
-                    </p>
-                  </div>
-                </div>
+                <!-- Content will be dynamically generated here -->
               </div>
             </div>
           </div>
