feat: implement email domain validation for registration and login; update tests and error handling

--- a/src/authorization.html
+++ b/src/authorization.html
@@ -11,7 +11,7 @@
   <body>
     <header></header>
     <main>
-      <h1 class="text-center">Welcome to Tradeauction</h1>
+      <h1 class="text-center mt-5">Welcome to Tradeauction</h1>
       <section
         class="container-fluid d-flex justify-content-center auth-section"
       >
