feat: enhance error handling for item updates; add tests for API error scenarios

--- a/src/detail.html
+++ b/src/detail.html
@@ -106,29 +106,9 @@
           class="container-fluid bid-history-list col-12 col-sm-7 col-lg-12 pb-5"
         >
           <h1 class="mt-5 mb-4">Bid History</h1>
-          <div class="p-3 pb-1 rounded-3 bid-history-list-body">
+          <div class="p-3 pb-2 rounded-3 bid-history-list-body">
             <ul class="p-0">
-              <li class="d-flex justify-content-between">
-                <div class="bid-list-name flex-grow-1">Ola Nordmann</div>
-                <div class="bid-list-date flex-grow-1 text-center">
-                  Mars 26.2025
-                </div>
-                <div class="bid-list-amount flex-grow-1 text-end">10 Cr</div>
-              </li>
-              <li class="d-flex justify-content-between">
-                <div class="bid-list-name flex-grow-1">Ola Nordmann</div>
-                <div class="bid-list-date flex-grow-1 text-center">
-                  Mars 26.2025
-                </div>
-                <div class="bid-list-amount flex-grow-1 text-end">10 Cr</div>
-              </li>
-              <li class="d-flex justify-content-between">
-                <div class="bid-list-name flex-grow-1">Ola Nordmann</div>
-                <div class="bid-list-date flex-grow-1 text-center">
-                  Mars 26.2025
-                </div>
-                <div class="bid-list-amount flex-grow-1 text-end">10 Cr</div>
-              </li>
+              <!-- Content will be dynamically generated here -->
             </ul>
           </div>
         </div>
