feat: enhance profile data fetching with error handling and improve layout styles

--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
           </div>
         </div>
         <div class="text-nowrap position-absolute display-credits">
-          <i><!-- Content loaded dynamic -->></i>
+          <i><!-- Content loaded dynamic --></i>
         </div>
       </nav>
     </header>
