--- a/src/detail.html
+++ b/src/detail.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header class="sticky-top">
-      <nav class="navbar navbar-dark navbar-expand-lg">
+      <nav class="navbar navbar-dark navbar-expand-lg ms-3 me-3">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">
             <img
@@ -61,9 +61,9 @@
         </div>
       </div>
       <section class="container-fluid mt-2 mb-5 product-section">
-        <div class="d-flex product-detail-container me-auto ms-auto">
+        <div class="d-flex product-detail-container me-3 ms-3">
           <div
-            class="container-fluid d-inline-flex flex-column col-12 col-sm-7"
+            class="container-fluid d-inline-flex flex-column col-12 col-lg-6"
           >
             <div class="card-detail mb-3">
               <h1 class="mt-5 mb-5 ms-0">Product Detail</h1>
@@ -73,7 +73,7 @@
             </div>
           </div>
           <div
-            class="container-fluid d-inline-flex flex-column align-items-end col-12 col-sm-7 col-lg-5"
+            class="container-fluid d-inline-flex flex-column align-items-end col-12 col-lg-6"
           >
             <div
               class="container-fluid d-flex flex-column pt-5 justify-content-center place-bid-card"
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div
-          class="container-fluid bid-history-list col-12 col-sm-7 col-lg-12 pb-5"
+          class="container-fluid bid-history-list p-4 pb-5"
         >
           <h1 class="mt-5 mb-4">Bid History</h1>
           <div class="p-3 pb-2 rounded-3 bid-history-list-body">
