--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <header class="sticky-top">
-      <nav class="navbar navbar-dark navbar-expand-lg">
+      <nav class="navbar navbar-dark navbar-expand-lg ms-3 me-3">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">
             <img
