fix: update logo image path to assets directory in detail, profile, and template pages

--- a/src/template.html
+++ b/src/template.html
@@ -14,7 +14,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img
-              src="img/logo.png"
+              src="assets/img/logo.png"
               alt="Logo"
               width="227"
               height="170"
